[tool.poetry]
name = "beets-lastloved"
version = "0.1.0"
description = "Plugin for beets (https://beets.io) to import loved track values from last.fm"
authors = ["retchohrips <44993244+retchohrips@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/retchohrips/beets-lastloved"
repository = "https://github.com/retchohrips/beets-lastloved"

packages = [{ include = "beetsplug" }]
include = ["README.md"]

keywords = ["music", "bandcamp", "beets", "metadata"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.11"
beets = "^1.6.0"
pylast = "^5.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-eradicate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
